# fortunelabs-mainboard-l

./: fortunelabs.code-workspace
components/ssd1306/: CMakeLists.txt  Kconfig.projbuild  ssd1306.c  ssd1306.h  ssd1306_i2c_legacy.c  ssd1306_i2c_new.c  ssd1306_spi.c
firmware/: .clang-format  CMakeLists.txt  Readme.md  platformio.ini  sdkconfig
firmware/main/: CMakeLists.txt  main.c  read_sensor.c  read_sensor.h  write_actuator.c  write_actuator.h  write_display.c  write_display.h
firmware/main/bus/: i2c_bus.c  i2c_bus.h
firmware/main/common/: app_types.h
firmware/main/drivers/ic/: ads1115.c  ads1115.h  mcp23017.c  mcp23017.h  ssd1306.c  ssd1306.h
firmware/main/drivers/output/: actuator_dummy.c  actuator_dummy.h
firmware/main/drivers/sensor/: sensor_dummy.c  sensor_dummy.h
firmware/main/hal/: display_driver.h  output_driver.h  sensor_driver.h  transport_driver.h
firmware/main/network/: network_manager.c  network_manager.h  readme.md
firmware/main/system/: decision.md  system_config.c  system_config.h  system_log.c  system_log.h  system_ota.c  system_ota.h  system_supervisor.c  system_supervisor.h
firmware/main/tasks/: task_actuator.c  task_display.c  task_sensor.c
main/: CMakeLists.txt  idf_component.yml  main.c  read_sensor.c  write_actuator.c
